<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/resultado_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/resultado_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resultado_label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/resultado_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/resultado_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resultado_text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/resultado_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        app:layout_constraintTop_toBottomOf="@id/resultado_texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>
        
</androidx.constraintlayout.widget.ConstraintLayout>
